[package]
name = "coolapk_token"
version = "0.1.0"
authors = ["YEOLLL <28512134+YEOLLL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"base64" = "0.11.0"
"reqwest" = "0.9.9"
"chrono" = "0.4"
"byteorder" = "1.3.4"
"rust_md5" = "0.2.0"
